# KODELESimulation

./: .gitignore  CMakeLists.txt  run.mac  vis.mac
Analysis/: efficiency.py
Analysis/src/: EfficienciesPlot.py  sigmoid.py
Garfield/: CMakeLists.txt  CO2_30_SF6_05.gas  CO2_30_SF6_1.gas  CO2_40_SF6_1.gas  GasTableGenerator.C  KODELE.cc  MultipleKODELE.cc  NSimulations.cc  README.md  cms_rpc_95.2_4.5_0.3_25-40kV.gas  run_simulations.py
Garfield/include/: ParallelPlate3D.hh
Garfield/include/utils/: Layer.hh  StopWatch.hh  TimeWindow.hh  TrackSettings.hh  Units.hh  Vectors3D.hh
Garfield/src/: AvalancheGrid.cc  ParallelPlate3D.cc
Geant4/: vis.mac
Geant4/include/: DetectorConstruction.hh  DetectorConstructionMessenger.hh  PhysicsList.hh
Geant4/src/: DataHandler.cc  DetectorConstruction.cc  DetectorConstructionMessenger.cc  PhysicsList.cc
include/: SensitiveDetector.hh
src/: DataHandler.cc  DetectorConstruction.cc  PrimaryGeneratorAction.cc  SensitiveDetector.cc
